--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
 altgraph==0.10.2
+appnope==0.1.0
 astroid==1.6.1
 autopep8==1.3.4
 backports.functools-lru-cache==1.5
+backports.shutil-get-terminal-size==1.0.0
+bcrypt==3.1.4
 bdist-mpkg==0.5.0
 bonjour-py==0.3
+cffi==1.11.5
 click==6.7
 configparser==3.5.0
+decorator==4.3.0
 Django==1.11
 enum34==1.1.6
 Flask==0.12.2
 futures==3.2.0
+ipython==5.6.0
+ipython-genutils==0.2.0
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
@@ -20,8 +27,15 @@ matplotlib==1.3.1
 mccabe==0.6.1
 modulegraph==0.10.4
 numpy==1.8.0rc1
+pathlib2==2.3.0
+pexpect==4.5.0
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
 py2app==0.7.3
 pycodestyle==2.3.1
+pycparser==2.18
+Pygments==2.2.0
 pylint==1.8.2
 pyobjc-core==2.5.1
 pyobjc-framework-Accounts==2.5.1
@@ -62,11 +76,15 @@ pyOpenSSL==0.13.1
 pyparsing==2.0.1
 python-dateutil==1.5
 pytz==2013.7
+scandir==1.7
 scipy==0.13.0b1
+simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.11.0
+traitlets==4.3.2
 vboxapi==1.0
 virtualenv==15.1.0
+wcwidth==0.1.7
 Werkzeug==0.14.1
 wrapt==1.10.11
 xattr==0.6.4
